--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 ﻿<!-- header -->
 <app-header></app-header>
-<div style="padding-top: 100px;" class="space-top">
+<div style="padding-top: 55px;" class="space-top">
 </div>
 <!-- main app container -->
 <div>
     <router-outlet></router-outlet>
 </div>
+<div style="padding-bottom: 55px;" class="space-top">
+</div>
 <!-- footer -->
-
