--- a/src/app/theme/components/choose-word-type/choose-word-type.component.html
+++ b/src/app/theme/components/choose-word-type/choose-word-type.component.html
@@ -1,12 +1,16 @@
 <div class="choose-word">
   <div class="label-suggest">Choose the correct word</div>
-  <div class="word-name">
-    {{wordShow}}
+  <div class="wrap-word-name">
+    <div class="wrap-word-name-item">
+      {{wordShow}}
+    </div>
   </div>
-  <div class="word-type">{{word.wordType}}</div>
+  <div class="wrap-word-type">
+    <div class="wrap-word-type-item">{{word.wordType}}</div>
+  </div>
   <div>
     <div class="wrap-word">
-      <div class="word-item" (click)="chooseWord($event)" *ngFor="let word of randomWordList">
+      <div id="answer-{{i}}" class="word-item" (click)="chooseWord($event)" *ngFor="let word of randomWordList; let i = index">
         {{word}}
       </div>
     </div>
