--- a/src/app/theme/components/input-word-type/input-word-type.component.scss
+++ b/src/app/theme/components/input-word-type/input-word-type.component.scss
@@ -8,8 +8,11 @@
       padding: 12px;
       border-radius: 10px;
       outline: none;
-      border: 2px solid #fddb57;
+      border: 2px solid #423e2e96;
       margin: 50px auto 50px auto;
+    }
+    .input-correct{
+      border: 2px solid #5cb85c;
     }
   }
 
@@ -20,15 +23,17 @@
     color: #4476ab9e;
   }
 
-  .word-type {
-    padding: 15px;
-    text-align: center;
-    background: #f8f9fa;
-    border-radius: 10px;
-    margin: auto;
-    width: 10%;
-    border: 3px solid #d6d2d2;
-    font-weight: 500;
+  .wrap-word-type{
+    display: flex;
+    margin: 20px 0px;
+    &-item{
+      margin: 0 auto;
+      padding: 15px;
+      text-align: center;
+      font-weight: 500;
+      border-radius: 10px;
+      background-color: #79adaf;
+    }
   }
   .wrap-word{
     width: 100%;
