--- a/src/app/theme/components/default-word-type/default-word-type.component.html
+++ b/src/app/theme/components/default-word-type/default-word-type.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="mt-5">
     <div class="des-word">EXAMPLE</div>
-    <div>{{wordExample}}</div>
+    <div style="font-weight: 500">{{wordExample}}</div>
   </div>
 
   <audio id="sound1"
