--- a/src/app/theme/components/input-word-type/input-word-type.component.scss
+++ b/src/app/theme/components/input-word-type/input-word-type.component.scss
@@ -14,6 +14,9 @@
     .input-correct{
       border: 2px solid #5cb85c;
     }
+    .input-incorrect{
+      border: 2px solid #ff0000;
+    }
   }
 
 
