update course UI

--- a/src/app/modules/user/components/course-card/course-card.component.html
+++ b/src/app/modules/user/components/course-card/course-card.component.html
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="space"></div>
-  <div  *ngFor="let card of courseCard">
-    <app-simple-card  [card] = "card">
-    </app-simple-card>
+  <div class="container-simple-card">
+    <div  *ngFor="let card of courseCard">
+      <app-simple-card  [card] = "card">
+      </app-simple-card>
+    </div>
   </div>
 </div>
