--- a/src/app/modules/user/components/word-lesson/word-lesson.component.scss
+++ b/src/app/modules/user/components/word-lesson/word-lesson.component.scss
@@ -1,6 +1,5 @@
 .wrap-lesson {
   padding-top: 30px;
-
   .progress-box {
     justify-content: space-between;
     .progress-cus {
@@ -23,11 +22,11 @@
   .btn-learn {
     margin-top: 20px;
     margin-left: 16px;
-    background-color: #17304a;
-    border-color: #17304a;
+    background-color: #173554;
+    border-color: #173554;
   }
   .btn-warning{
-    background-color: #ffc83b99;
+    background-color: #ffc83bed;
     border-color: #ffc10896;
   }
   .title-lesson {
@@ -66,7 +65,7 @@
 
   i {
    font-size: 50px;
-    color: #084e98;
+    color:#173554;
   }
 
   span {
