--- a/src/app/modules/user/components/simple-card/simple-card.component.html
+++ b/src/app/modules/user/components/simple-card/simple-card.component.html
@@ -8,23 +8,24 @@
     </div>
   </div>
   <div class="learn-target">
-    <div class="title">{{card.nameCard}}</div>
-    <progress-bar [progress]="80" [color]="'#488aff'">
-    </progress-bar>
-    <div class="target-button">
-      <div class="target frequency"  type="button"  data-toggle="modal" data-toggle="modal" data-target="#exampleModalCenter" (click)="showPopupTarget(); $event.stopPropagation();">
-        <div>
-          <span class="highlight">{{card.timeTarget}}</span>phut moi ngay
-        </div>
-        <div>
-          <i class="fas fa-history mr-1"></i>Thiet lap muc tieu hang ngay
-        </div>
-      </div>
-      <div class="target continuity">
-        <div>
-          <span class="highlight">{{card.continuityDay}}</span> ngay hoc lien tuc
-        </div>
-      </div>
+    <div class="wrap-title-header">
+      <span class="title">{{card.nameCard}}</span>
+      <span   type="button" data-toggle="modal" data-toggle="modal"
+             data-target="#exampleModalCenter" (click)="showPopupTarget(); $event.stopPropagation();" class="target frequency setting-target">Set a daily goal
+        <i class="ml-2 fal fa-trophy-alt"></i>
+      </span>
+    </div>
+    <div class="progress-course-score"><span class="score-achieved">47 </span>/<span style="font-weight: bold"> 673</span>
+      <span> words learned</span></div>
+    <div>
+        <progress-bar class="progress-course" [progress]="80">
+        </progress-bar>
+    </div>
+    <div style="margin-top: 24px; margin-left: -18px">
+      <i class="fab icon-course-learn fa-leanpub"></i>
+      <span class="btn-learn-new-word">
+           LEARN NEW WORDS
+      </span>
     </div>
   </div>
 </div>
@@ -45,48 +46,3 @@
     </div>
   </div>
 </div>
-<!--<div class="modal fade" id="modalTarget" tabindex="-1" role="dialog">-->
-<!--  <div class="modal-dialog" role="document">-->
-<!--    <div class="modal-content">-->
-<!--      <div class="modal-header">-->
-<!--        <h5 class="modal-title" id="exampleModalLongTitle">Target</h5>-->
-<!--        <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--          <span aria-hidden="true">&times;</span>-->
-<!--        </button>-->
-<!--      </div>-->
-<!--      <div class="modal-body">-->
-<!--        <div class="title">Hãy đặt mục tiêu hằng ngày, rồi hoàn thành mục tiêu để giành phần thưởng</div>-->
-<!--        <div class="radio-target d-flex flex-column mt-3">-->
-<!--          <div class="form-check form-check-inline">-->
-<!--            <input class="form-check-input" type="radio" id="inlineCheckbox1" name="radioTarget" [value]="5"-->
-<!--                   [(ngModel)]="value">-->
-<!--            <label class="form-check-label grid-column-110px-1fr" for="inlineCheckbox1">-->
-<!--              <span>1500 điểm:</span>-->
-<!--              <span class="text-center">5 phút mỗi ngày</span>-->
-<!--            </label>-->
-<!--          </div>-->
-<!--          <div class="form-check form-check-inline">-->
-<!--            <input class="form-check-input" type="radio" id="inlineCheckbox2" name="radioTarget" [value]="15"-->
-<!--                   [(ngModel)]="value">-->
-<!--            <label class="form-check-label grid-column-110px-1fr" for="inlineCheckbox2">-->
-<!--              <span>6000 điểm:</span>-->
-<!--              <span class="text-center">15 phút mỗi ngày</span>-->
-<!--            </label>-->
-<!--          </div>-->
-<!--          <div class="form-check form-check-inline">-->
-<!--            <input class="form-check-input" type="radio" id="inlineCheckbox3" name="radioTarget" [value]="45"-->
-<!--                   [(ngModel)]="value">-->
-<!--            <label class="form-check-label grid-column-110px-1fr" for="inlineCheckbox3">-->
-<!--              <span>20,000 điểm:</span>-->
-<!--              <span class="text-center">45 phút mỗi ngày</span>-->
-<!--            </label>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="modal-footer">-->
-<!--        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModal">Close</button>-->
-<!--        <button type="button" class="btn btn-primary" (click)="onSubmitTarget()">Save changes</button>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
