--- a/src/app/modules/user/components/simple-card/simple-card.component.scss
+++ b/src/app/modules/user/components/simple-card/simple-card.component.scss
@@ -1,3 +1,56 @@
+.learn-word{
+ margin: 20px auto 20px auto;
+  max-width: 750px;
+  .wrap-title-header{
+    display: flex;
+    justify-content: space-between;
+    .setting-target{
+      background: #037588;
+      color: #e3f2f9;
+      font-weight: 500;
+      font-size: 14px;
+      padding: 3px 31px;
+      border-radius: 15px;
+      cursor: pointer;
+     }
+    }
+  .btn-learn-new-word{
+    padding: 5px 20px;
+    background-color: #ffc107;
+    border-radius: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    color: #173554;
+  }
+  .icon-course-learn{
+    position: relative;
+    font-size: 35px;
+    left: 22px;
+    top: 1px;
+  }
+}
+
+::ng-deep{
+  .progress-course{
+    width: 100%;
+    .progress-outer{
+     height: 22px;
+      margin: 0 !important;
+    }
+    .progress-inner{
+      font-size: 12px;
+      height: 16px;
+      margin-top: -2px;
+      margin-left: -2px;
+      background-color: #79adaf !important;
+    }
+    &-score{
+     font-size: 14px;
+      font-weight: 500;
+      margin-bottom: 5px;
+    }
+  }
+}
 .modal-cus {
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -8,7 +61,7 @@
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 /* Modal Content */
