--- a/src/app/modules/user/components/simple-card/simple-card.component.html
+++ b/src/app/modules/user/components/simple-card/simple-card.component.html
@@ -26,6 +26,7 @@
       <span class="btn-learn-new-word">
            LEARN NEW WORDS
       </span>
+      <span>Created by: <span>English Training</span></span>
     </div>
   </div>
 </div>
