--- a/src/app/modules/user/components/topic/topic.component.html
+++ b/src/app/modules/user/components/topic/topic.component.html
@@ -1,10 +1,11 @@
 <div class="wrap-topic">
   <div class="space-height"></div>
   <div class="card-header-topic">
+    <div class="course-name">Name Of Course</div>
     <div class="progress-topics-score"><span class="score-achieved">47 </span>/<span style="font-weight: bold"> 673</span>
       <span> words learned</span>
     </div>
-    <div class="my-4">
+    <div class="mb-4">
       <progress-bar class="progress-topics" [progress]="80">
       </progress-bar>
     </div>
