--- a/src/app/theme/layouts/header/header.component.html
+++ b/src/app/theme/layouts/header/header.component.html
@@ -13,10 +13,13 @@
 
       </ul>
     </div>
-    <div class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        user
-      </a>
+    <div class="nav-item dropdown d-flex">
+      <div class="wrap-header-user">
+        <i style="color: #929292" class="fas fa-user"></i>
+      </div>
+      <span style="padding-left: 5px;
+    color: white" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      </span>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <a class="nav-item nav-link" (click)="logout()">Logout</a>
       </div>
