--- a/src/app/modules/user/components/home/home.component.html
+++ b/src/app/modules/user/components/home/home.component.html
@@ -1,4 +1,4 @@
 <p>home works!</p>
-<button class="btn btn-primary" (click)="getWord()">Get</button>
-<button class="btn btn-primary" (click)="fillWords()">Fill</button>
-<button class="btn btn-primary" (click)="updateData()">update</button>
+<!--<button class="btn btn-primary" (click)="getWord()">Get</button>-->
+<!--<button class="btn btn-primary" (click)="fillWords()">Fill</button>-->
+<!--<button class="btn btn-primary" (click)="updateData()">update</button>-->
