--- a/src/app/modules/user/components/simple-card/simple-card.component.scss
+++ b/src/app/modules/user/components/simple-card/simple-card.component.scss
@@ -1,6 +1,7 @@
 .learn-word{
  margin: 20px auto 20px auto;
   max-width: 750px;
+  cursor: pointer;
   .wrap-title-header{
     display: flex;
     justify-content: space-between;
@@ -27,6 +28,17 @@
     font-size: 35px;
     left: 22px;
     top: 1px;
+  }
+  .wrap-card-bottom{
+    margin-top: 24px;
+    margin-left: -18px;
+    display: flex;
+    justify-content: space-between;
+    .auth-created{
+      font-size: 14px;
+      position: relative;
+      bottom: -23px;
+    }
   }
 }
 
