--- a/src/app/modules/user/components/practice-word/practice-word.component.html
+++ b/src/app/modules/user/components/practice-word/practice-word.component.html
@@ -4,9 +4,9 @@
     <div class="wrap-progress">
       <progress-bar class="progress-score" [progress]="progressNumber" [color]="'#488aff'">
       </progress-bar>
-      <div class="item-score">
-        {{currentScore}}
-      </div>
+<!--      <div class="item-score">-->
+<!--        {{currentScore}}-->
+<!--      </div>-->
     </div>
     <div>
       <ng-container *ngIf="!isCorrectChosen">
