--- a/src/app/modules/user/components/simple-card/simple-card.component.html
+++ b/src/app/modules/user/components/simple-card/simple-card.component.html
@@ -28,7 +28,7 @@
            LEARN NEW WORDS
       </span>
       </div>
-      <span class="auth-created" >Created by: <span style="font-weight: 500">{{card.course.author}}</span></span>
+      <span class="auth-created" >Created by: <span style="font-weight: 500">{{card.course.authorName}}</span></span>
     </div>
   </div>
 </div>
