--- a/src/app/modules/user/components/practice-word/practice-word.component.scss
+++ b/src/app/modules/user/components/practice-word/practice-word.component.scss
@@ -46,6 +46,21 @@
     color: #000000;
   }
 }
+.incorrect-icon{
+  float: right;
+  padding: 17px;
+  margin-top: 50px;
+  align-items: center;
+  border-radius: 13px;
+  font-weight: 500;
+  background-color: #ff0000 !important;
+  color: #212529 !important;
+  i {
+    margin-left: 10px;
+    font-size: 39px;
+    color: #000000;
+  }
+}
 .wrap-progress {
   align-items: center;
   display: flex;
@@ -72,4 +87,84 @@
     line-height: 47px;
     padding: 0px 28px;
   }
+}
+.modal-cus {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #117a8b;
+  color: white;
+}
+
+.modal-body {
+  padding: 2px 16px;
+  height:  400px;
+}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #117a8b;
+  color: white;
+}
+.icon-complete-topic{
+  font-size: 180px;
+  color: #0d7324;
+  align-self: center;
+  margin: 0 auto;
+}
+.btn-continue-learn{
+  font-weight: 500;
+  margin: 5px 0;
 }
