--- a/src/app/modules/user/components/topic/topic.component.html
+++ b/src/app/modules/user/components/topic/topic.component.html
@@ -21,11 +21,11 @@
     </div>
   </div>
   <div class="wrap-topic-container">
-    <div (click)="goToListWord(topic.id)" *ngFor="let topic of topics; let indexNumber = index">
+    <div (click)="goToListWord(topic.topic.id)" *ngFor="let topic of topics; let indexNumber = index">
       <div class="wrap-topic-item ">
         <div [ngClass]="topic.status?'topic-bg-success':''" class="inner-topic-container">
           <div class="wrap-number-topic">
-            <div class="wrap-number-topic-item">{{indexNumber}}</div>
+            <div class="wrap-number-topic-item">{{indexNumber+1}}</div>
           </div>
           <div *ngIf="!topic.status ; else isComplete" class="topic-item-icon">
             <i class="fa fa-graduation-cap" aria-hidden="true" style="font-size:60px"></i>
@@ -34,7 +34,7 @@
             <i class="fas fa-flower-daffodil topic-icon-success"></i>
             <i class="fas fa-check topic-icon-check" aria-hidden="true" style="font-size:30px"></i>
           </ng-template>
-          <div [ngClass]="topic.status?'topic-item-name-success':''" class="topic-item-name">{{topic.topicName}}</div>
+          <div [ngClass]="topic.status?'topic-item-name-success':''" class="topic-item-name">{{topic.topic.topicName}}</div>
         </div>
       </div>
     </div>
