update create function add topic

--- a/src/app/modules/user/components/simple-card/simple-card.component.html
+++ b/src/app/modules/user/components/simple-card/simple-card.component.html
@@ -5,11 +5,44 @@
         class="user-avatar"
         src="{{card.course.imgUrl}}"
         alt="avt">
+         <input *ngIf="isEdit"
+          class="choose-img"
+          (click)="$event.stopPropagation();"
+          #imageInput
+          type="file"
+          accept="image/*"
+          (change)="processFile(imageInput)">
+      <div *ngIf="selectedFile" class="img-preview-container">
+
+        <div class="img-preview{{selectedFile.status === 'fail' ? '-error' : ''}}"
+             [ngStyle]="{'background-image': 'url('+ selectedFile.src + ')'}">
+        </div>
+
+        <div *ngIf="selectedFile.pending" class="img-loading-overlay">
+          <div class="img-spinning-circle"></div>
+        </div>
+
+        <div *ngIf="selectedFile.status === 'ok'" class="alert alert-success"> Image Uploaded Succesfuly!</div>
+        <div *ngIf="selectedFile.status === 'fail'" class="alert alert-danger"> Image Upload Failed!</div>
+      </div>
+    </div>
+    <div *ngIf="!!card.isEdit" (click)="$event.stopPropagation()">
+      <div *ngIf="!isEdit" (click)="onEditCourse();"  class="btb-edit">
+        <i class="far fa-edit icon-edit">
+        </i>
+      </div>
+      <div  class="btb-edit"*ngIf="isEdit" (click)="onUpdateCourse();">
+        <i class="fas fa-save icon-edit"></i>
+      </div>
     </div>
   </div>
   <div class="learn-target">
     <div class="wrap-title-header">
-      <span class="title">{{card.course.courseName}}</span>
+      <span  *ngIf="!isEdit, else isEditVal" class="title">{{card.course.courseName}}</span>
+      <ng-template #isEditVal>
+        <input (click)="$event.stopPropagation()" [(ngModel)]="simpleCourse.courseName">
+      </ng-template>
+
       <span   type="button" data-toggle="modal" data-toggle="modal"
              data-target="#exampleModalCenter" (click)="showPopupTarget(); $event.stopPropagation();" class="target frequency setting-target">Set a daily goal
         <i class="ml-2 fal fa-trophy-alt"></i>
@@ -30,6 +63,7 @@
       </div>
       <span class="auth-created" >Created by: <span style="font-weight: 500">{{card.course.authorName}}</span></span>
     </div>
+
   </div>
 </div>
 <!-- The Modal -->
